# riceforge

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rice_submission.md
.github/workflows/: ci.yml  release.yml
examples/: pipeline.toml  rice.toml
fixtures/: test-index.json
rf-cli/: Cargo.toml
rf-cli/src/: main.rs
rf-core/: Cargo.toml
rf-core/src/: backup.rs  config.rs  deploy.rs  error.rs  git.rs  index.rs  installed.rs  lib.rs  models.rs  packages.rs  pipeline.rs  system.rs
rf-core/tests/: integration_test.rs
rf-gui/: Cargo.toml  Dioxus.toml  tailwind.css
rf-gui/assets/: riceforge.desktop  tailwind.css
rf-gui/assets/styling/: main.css  navbar.css  shop.css
rf-gui/src/: main.rs
rf-gui/src/components/: header.rs  mod.rs  product_card.rs  product_grid.rs  rice_card.rs
rf-gui/src/views/: browse.rs  detail.rs  home.rs  installed.rs  mod.rs  navbar.rs  settings.rs
rf-index/: Cargo.toml
rf-index/src/: main.rs
scripts/: build.sh  completions.sh  coverage.sh  dev.sh  install.sh  test.sh
