[package]
name = "rf-index"
version = "0.1.0"
edition = "2024"
description = "Index builder and validator for the RiceForge registry"

[[bin]]
name = "rf-index"
path = "src/main.rs"

[dependencies]
rf-core = { path = "../rf-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
